<resources>
    <string name="app_name">Form Registrasi</string>
    <string name="welcome">Welcome</string>
    <string name="simpan">Simpan</string>
    <string name="MyProfile">My Profile</string>
    <string name="nim">NIM :</string>
    <string name="nama">Nama :</string>
    <string name="tanggal_lahir">Tanggal Lahir :</string>
    <string name="alamat">Alamat :</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="kembali">Kembali</string>
</resources>
